jdk10 refactor